<resources>
    <string name="app_name">Pokemon Quest!</string>
    <string name="log_in">log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="contact_number">Contact Number</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="my_pokemon">My Pokemon</string>
    <string name="scan">Scan</string>
    <string name="pokedex">Pokedex</string>

    <string name="default_notification_channel_id">Notification</string>
    <string name="fcm_message">Notification</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pokemon_name">Pokemon Name</string>
    <string name="generation">Generation</string>
    <string name="type">Type</string>
    <string name="attack">Attack</string>
    <string name="defense">Defense</string>
    <string name="speed">Speed</string>
    <string name="special_defence">Special Defence</string>
    <string name="special_attack">Special Attack</string>
    <string name="log_out">Log Out</string>
    <string name="about_us">About Us</string>
    <string name="close_drawer">close_drawer</string>
    <string name="open_drawer">open drawer</string>
    <string name="oops_looks_like_you_haven_t_caught_any_pokemon_n_nfind_and_scar_a_qr_code_now">Oops! Looks like you haven\'t caught any pokemon.  Find and scan a QR code now!</string>
    <string name="you_have_caught_caught_these_pokemon">You have caught these pokemon :-</string>
    <string name="moves">Moves</string>
    <string name="level">Level</string>
    <string name="evolve">evolve</string>
    <string name="tap_to_scan_a_qr_code">Tap to scan a QR code</string>
    <string name="item_storage">Item Storage</string>
    <string name="oops_looks_like_you_have_no_items_n_nscan_a_qr_code_now">Oops! Looks like you have NO items.  Scan a QR Code NOW!</string>
    <string name="x0">x0</string>
    <string name="usepotion">Do you want to use a potion?</string>
    <string name="potion">Potion</string>
    <string name="revive">Revive</string>
    <string name="useRevive">Do you want to use a revive?</string>
    <string name="yes">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign up</string>
    <string name="steps_walked">Steps Walked</string>
    <string name="level_up">Level Up</string>
    <string name="add_to_party">Add To Party</string>
    <string name="clear_party">Clear Party</string>
    <string name="my_party">My Party</string>
    <string name="loading">Loading...</string>
    <string name="which_pokemon_do_you_want_to_use_it_on">Which Pokemon do you want to use it on?</string>
    <string name="hp_left">HP Left</string>
    <string name="_0_0">0.0%</string>
    <string name="team_name">Team Name</string>
    <string name="my_badges">My Badges</string>
</resources>
