<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:elevation="5dp"
    app:cardCornerRadius="7dp"
    android:id="@+id/pokeCard"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="2dp">
    <LinearLayout

        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:id="@+id/pokemon_image"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/pokemon_name"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:id="@+id/pokemon_name"
            android:layout_margin="5dp"
            android:layout_weight="2"
            android:fontFamily="@font/mincraft"/>

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@color/placeholder_bg"
            android:layout_weight="0.01"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="@dimen/dimen_10"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="5dp"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hp_left"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:fontFamily="@font/mincraft"
                android:textAlignment="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_0_0"
                android:textColor="@color/black"
                android:layout_gravity="center"
                android:id="@+id/hp_percentage"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:fontFamily="@font/mincraft"
                android:textAlignment="center"/>
        </LinearLayout>



    </LinearLayout>
</androidx.cardview.widget.CardView>