<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:background="@drawable/bg"
    tools:context=".RegisterActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="6dp"
            android:id="@+id/progress_bar"
            android:orientation="horizontal"
            android:background="@color/white"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:visibility="gone"
            >
            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/white"
                android:indeterminateTint="@color/red700"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="15dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/loading"
                android:layout_margin="15dp"
                android:textColor="@color/black"
                android:layout_gravity="center"/>
        </LinearLayout>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="10dp"
                android:elevation="3dp"
                app:cardCornerRadius="15dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="30dp"
                    android:background="@drawable/rounded_corner"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/team_name"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/name_register"
                            android:hint="@string/name"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/email"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/email_register"
                            android:hint="@string/email"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/contact_number"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:id="@+id/contact_register"
                            android:hint="@string/contact_number"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/password"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true">

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:id="@+id/password_register"
                                android:hint="@string/password"/>

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:text="@string/confirm_password"
                            android:textColor="@color/black"
                            android:layout_weight="1"
                            />

                        <com.google.android.material.textfield.TextInputLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:passwordToggleEnabled="true"
                            >

                            <EditText
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPassword"
                                android:id="@+id/confirm_password_register"
                                android:hint="@string/confirm_password"/>

                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/rounded_corner"
                        android:id="@+id/register_button"
                        >
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="10dp"
                            android:text="@string/register"
                            android:textStyle="bold"
                            android:textAllCaps="true"
                            android:textColor="@color/black"
                            android:textAlignment="center"/>
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/alreadyRegistered">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="Already have an account? Log in"
                            android:layout_marginTop="5dp"
                            android:textAlignment="center"/>
                    </LinearLayout>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </ScrollView>
    </FrameLayout>


</LinearLayout>